--- a/src/app/components/employee/employee-list/employee-list.component.html
+++ b/src/app/components/employee/employee-list/employee-list.component.html
@@ -18,58 +18,81 @@
       <mat-spinner></mat-spinner>
     </div>
     <div class="overflow-auto mat-elevation-z8">
-      <table mat-table [dataSource]="dataSource" class="table">
+      <table mat-table [dataSource]="dataSource" matSort class="table">
+        <ng-container matColumnDef="employeeId">
+          <th mat-header-cell mat-sort-header *matHeaderCellDef>Employee Id</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.employeeId }}
+          </td>
+        </ng-container>
+
         <ng-container matColumnDef="firstName">
-          <th mat-header-cell *matHeaderCellDef>Name</th>
+          <th mat-header-cell mat-sort-header *matHeaderCellDef>Name</th>
           <td mat-cell *matCellDef="let element">
             {{ element.firstName + " " + element.lastName | titlecase }}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="departmentName">
-          <th mat-header-cell *matHeaderCellDef>Department</th>
+          <th mat-header-cell mat-sort-header *matHeaderCellDef>Department</th>
           <td mat-cell *matCellDef="let element">
             {{ element.departmentName }}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="address">
-          <th mat-header-cell *matHeaderCellDef>Address</th>
+          <th mat-header-cell mat-sort-header *matHeaderCellDef>Address</th>
           <td mat-cell *matCellDef="let element">
             {{ element.address }}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="idProofType">
-          <th mat-header-cell *matHeaderCellDef>Id Proof Type</th>
+          <th mat-header-cell mat-sort-header *matHeaderCellDef>
+            Id Proof Type
+          </th>
           <td mat-cell *matCellDef="let element">
             {{ element.idProofType }}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="idProof">
-          <th mat-header-cell *matHeaderCellDef>Id Proof</th>
+          <th mat-header-cell mat-sort-header *matHeaderCellDef>Id Proof</th>
           <td mat-cell *matCellDef="let element">
             {{ element.idProof }}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="salaryCategoryName">
-          <th mat-header-cell *matHeaderCellDef>Salary Category</th>
+          <th mat-header-cell mat-sort-header *matHeaderCellDef>
+            Salary Category
+          </th>
           <td mat-cell *matCellDef="let element">
             {{ element.salaryCategoryName }}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="salary">
-          <th mat-header-cell *matHeaderCellDef class="text-right">Salary</th>
+          <th
+            mat-header-cell
+            mat-sort-header
+            *matHeaderCellDef
+            class="text-right"
+          >
+            Salary
+          </th>
           <td mat-cell *matCellDef="let element" class="text-right">
             {{ element.salary | currency : "INR" }}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="contactNo">
-          <th mat-header-cell *matHeaderCellDef class="text-right">
+          <th
+            mat-header-cell
+            mat-sort-header
+            *matHeaderCellDef
+            class="text-right"
+          >
             Contact No
           </th>
           <td mat-cell *matCellDef="let element" class="text-right">
@@ -78,14 +101,19 @@
         </ng-container>
 
         <ng-container matColumnDef="dateOfJoining">
-          <th mat-header-cell *matHeaderCellDef>DOJ</th>
+          <th mat-header-cell mat-sort-header *matHeaderCellDef>DOJ</th>
           <td mat-cell *matCellDef="let element">
             {{ element.dateOfJoining }}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="allowedLeaveDays">
-          <th mat-header-cell *matHeaderCellDef class="text-right">
+          <th
+            mat-header-cell
+            mat-sort-header
+            *matHeaderCellDef
+            class="text-right"
+          >
             Allowed Leave Days
           </th>
           <td mat-cell *matCellDef="let element" class="text-right">
