--- a/src/app/components/payroll/salary-summary/salary-summary.component.html
+++ b/src/app/components/payroll/salary-summary/salary-summary.component.html
@@ -31,6 +31,12 @@
       </button>
     </div>
   </section>
+
+  <div class="print-btn" *ngIf="dataSource.data.length">
+    <button mat-icon-button matTooltip="print" color="accent" (click)="print()">
+      <mat-icon>print</mat-icon>
+    </button>
+  </div>
   <div class="mat-elevation-z8 table-container overflow-auto">
     <div *ngIf="loader" class="loader">
       <mat-spinner></mat-spinner>
@@ -45,7 +51,9 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
           First Check In
         </th>
-        <td mat-cell *matCellDef="let row">{{ row.employeeName }}</td>
+        <td mat-cell *matCellDef="let row">
+          {{ row.employeeName | titlecase }}
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="salaryMonthDate">
@@ -55,7 +63,9 @@
 
       <ng-container matColumnDef="salaryAmount">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Salary Amount</th>
-        <td mat-cell *matCellDef="let row">{{ row.salaryAmount }}</td>
+        <td mat-cell *matCellDef="let row">
+          {{ row.salaryAmount | currency : "INR" }}
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="deductionAmount">
