Added print component for salary summary

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,3 +19,4 @@
 <app-print-delivery-invoice></app-print-delivery-invoice>
 <app-print-delivery-receipt></app-print-delivery-receipt>
 <app-print-recovery-details></app-print-recovery-details>
+<app-print-salary-summary></app-print-salary-summary>
