Updated salary summary print style

--- a/src/app/components/payroll/salary-summary/print-salary-summary/print-salary-summary.component.html
+++ b/src/app/components/payroll/salary-summary/print-salary-summary/print-salary-summary.component.html
@@ -1,6 +1,6 @@
 <div class="flex">
   <div *ngFor="let salary of printService.salarySummary">
-    <div>Name & ID: {{ salary.employeeName }} - {{ salary.employeeId }}</div>
+    <div>Name: {{ salary.employeeName }} ({{ salary.employeeId }})</div>
     <div>Month: {{ salary.salaryMonthDate }}</div>
     <div *ngIf="salary.deductionAmount">
       <div>Amount: {{ salary.salaryAmount | currency : "INR" }}</div>
