--- a/src/app/components/payroll/salary-summary/salary-summary.component.html
+++ b/src/app/components/payroll/salary-summary/salary-summary.component.html
@@ -48,9 +48,7 @@
       </ng-container>
 
       <ng-container matColumnDef="employeeName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          First Check In
-        </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Employee Name</th>
         <td mat-cell *matCellDef="let row">
           {{ row.employeeName | titlecase }}
         </td>
@@ -74,6 +72,20 @@
         </th>
         <td mat-cell *matCellDef="let row">
           {{ row.deductionAmount | currency : "INR" }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="salaryAfterDeduction">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          Salary After Deduction
+        </th>
+        <td mat-cell *matCellDef="let row">
+          {{
+            (+row.salaryAmount - +row.deductionAmount < 0
+              ? 0
+              : +row.salaryAmount - +row.deductionAmount
+            ) | currency : "INR"
+          }}
         </td>
       </ng-container>
 
