--- a/src/app/components/payroll/salary-calculation/salary-calculation.component.html
+++ b/src/app/components/payroll/salary-calculation/salary-calculation.component.html
@@ -40,6 +40,24 @@
             <mat-icon>get_app</mat-icon>Fetch Attendance
           </button>
         </div>
+        <div class="mb-24 confirmed-salary" *ngIf="salaryDetails">
+          <span
+            ><div class="label">Salary Category</div>
+            {{ salaryDetails.salaryCategoryName }}</span
+          >
+          <span
+            ><div class="label">Salary Before Deduction</div>
+            {{ salaryDetails.salaryBeforeDeduction | currency : "INR" }}</span
+          >
+          <span
+            ><div class="label">Deduction</div>
+            {{ salaryDetails.deductionAmount | currency : "INR" }}</span
+          >
+          <span
+            ><div class="label">Confirmed Salary</div>
+            {{ salaryDetails.salary | currency : "INR" }}</span
+          >
+        </div>
         <mat-divider></mat-divider>
         <div class="table-container">
           <div *ngIf="loader" class="loader">
@@ -75,6 +93,13 @@
                 <th mat-header-cell *matHeaderCellDef>Worked Hours</th>
                 <td mat-cell *matCellDef="let element">
                   {{ element.workedHours }}
+                </td>
+              </ng-container>
+
+              <ng-container matColumnDef="confirmedAmount">
+                <th mat-header-cell *matHeaderCellDef>Confirmed Amount</th>
+                <td mat-cell *matCellDef="let element">
+                  {{ element.confirmedAmount | currency : "INR" }}
                 </td>
               </ng-container>
 
