--- a/src/app/components/sales/search-sales-order/search-sales-order.component.html
+++ b/src/app/components/sales/search-sales-order/search-sales-order.component.html
@@ -12,21 +12,18 @@
         <mat-error>This field is required.</mat-error>
       </mat-form-field>
 
-      <mat-form-field
-        appearance="fill"
-        class="w-35 ml-24"
+      <div
+        class="w-35 ml-24 d-inline-block"
         *ngIf="form.get('filterBy')?.value === 'party'"
       >
-        <mat-label>Party</mat-label>
-        <mat-select formControlName="partyId">
-          <ng-container *ngFor="let party of partyService.parties">
-            <mat-option [value]="party.partyId">{{
-              party.partyName
-            }}</mat-option>
-          </ng-container>
-        </mat-select>
-        <mat-error>This field is required.</mat-error>
-      </mat-form-field>
+        <app-party-combo-box
+          type="sales"
+          [patch]="form.get('partyId')?.value"
+          [partyFormControl]="form.get('partyId')"
+          [touched]="form.get('partyId')?.touched || false"
+        >
+        </app-party-combo-box>
+      </div>
 
       <mat-form-field
         appearance="fill"
