--- a/src/styles.scss
+++ b/src/styles.scss
@@ -374,3 +374,7 @@ input:disabled {
 .max-height-88 {
   max-height: 88vh !important;
 }
+
+.d-inline-block {
+  display: inline-block !important;
+}
