--- a/src/app/components/purchases/fibre/fibre-receive-conversion-order/fibre-receive-conversion-order.component.html
+++ b/src/app/components/purchases/fibre/fibre-receive-conversion-order/fibre-receive-conversion-order.component.html
@@ -13,17 +13,15 @@
     </mat-card-header>
     <mat-card-content>
       <form [formGroup]="form" class="form-container padding">
-        <mat-form-field appearance="fill" class="w-40">
-          <mat-label>Party</mat-label>
-          <mat-select formControlName="partyId">
-            <ng-container *ngFor="let party of partyService.parties">
-              <mat-option [value]="party.partyId">{{
-                party.partyName
-              }}</mat-option>
-            </ng-container>
-          </mat-select>
-          <mat-error>This field is required.</mat-error>
-        </mat-form-field>
+        <div class="w-40">
+          <app-party-combo-box
+            [disabled]="!!updateReceivedCODetails"
+            [patch]="updateReceivedCODetails?.partyId || ''"
+            [partyFormControl]="form.get('partyId')"
+            [touched]="form.get('partyId')?.touched || false"
+          >
+          </app-party-combo-box>
+        </div>
         <mat-form-field appearance="fill" class="w-25">
           <mat-label>Received Date</mat-label>
           <input
