--- a/src/app/components/sales/search-waste-delivery/search-waste-delivery.component.html
+++ b/src/app/components/sales/search-waste-delivery/search-waste-delivery.component.html
@@ -62,17 +62,14 @@
         ></mat-datepicker-toggle>
         <mat-date-range-picker #picker></mat-date-range-picker>
       </mat-form-field>
-      <mat-form-field appearance="fill" class="w-35 ml-24">
-        <mat-label>Party</mat-label>
-        <mat-select formControlName="partyId">
-          <ng-container *ngFor="let party of partyService.parties">
-            <mat-option [value]="party.partyId">{{
-              party.partyName
-            }}</mat-option>
-          </ng-container>
-        </mat-select>
-        <mat-error>This field is required.</mat-error>
-      </mat-form-field>
+      <div class="w-35 ml-24 d-inline-block">
+        <app-party-combo-box
+          type="sales"
+          [partyFormControl]="form.get('partyId')"
+          [touched]="form.get('partyId')?.touched || false"
+        >
+        </app-party-combo-box>
+      </div>
     </form>
     <button mat-raised-button (click)="onReset()" class="ml-32">
       <mat-icon>refresh</mat-icon>Reset
