--- a/src/app/components/sales/waste-order-delivery/waste-order-delivery.component.html
+++ b/src/app/components/sales/waste-order-delivery/waste-order-delivery.component.html
@@ -13,18 +13,16 @@
             <mat-error>This field is required.</mat-error>
             <mat-hint *ngIf="updateOrderDetails">Disabled</mat-hint>
           </mat-form-field>
-          <mat-form-field appearance="fill" class="w-40">
-            <mat-label>Party</mat-label>
-            <mat-select formControlName="partyId">
-              <ng-container *ngFor="let party of partyService.parties">
-                <mat-option [value]="party.partyId">{{
-                  party.partyName
-                }}</mat-option>
-              </ng-container>
-            </mat-select>
-            <mat-error>This field is required.</mat-error>
-            <mat-hint *ngIf="updateOrderDetails">Disabled</mat-hint>
-          </mat-form-field>
+          <div class="w-40">
+            <app-party-combo-box
+              type="sales"
+              [disabled]="!!updateOrderDetails"
+              [patch]="updateOrderDetails ? updateOrderDetails.partyId : ''"
+              [partyFormControl]="form.get('partyId')"
+              [touched]="form.get('partyId')?.touched || false"
+            >
+            </app-party-combo-box>
+          </div>
           <mat-form-field appearance="fill" class="w-20">
             <mat-label>DC Date</mat-label>
             <input
