Added validation for deduction remarks

--- a/src/app/components/payroll/salary-calculation/salary-calculation.component.html
+++ b/src/app/components/payroll/salary-calculation/salary-calculation.component.html
@@ -189,6 +189,7 @@
             <mat-form-field appearance="fill" class="w-35">
               <mat-label>Deduction Remarks</mat-label>
               <textarea matInput [formControl]="deductionRemarks"></textarea>
+              <mat-error>This field is required.</mat-error>
             </mat-form-field>
           </div>
           <mat-form-field appearance="fill" class="w-25 mr-24">
