--- a/src/app/components/sales/receive-yarn-return/choose-delivery-for-return/choose-delivery-for-return.component.html
+++ b/src/app/components/sales/receive-yarn-return/choose-delivery-for-return/choose-delivery-for-return.component.html
@@ -92,7 +92,7 @@
       </ng-container>
 
       <ng-container matColumnDef="lot">
-        <th mat-header-cell *matHeaderCellDef>Counts</th>
+        <th mat-header-cell *matHeaderCellDef>Lot</th>
         <td mat-cell *matCellDef="let element">{{ element.lot }}</td>
       </ng-container>
 
