--- a/src/app/components/tool-bar/tool-bar.component.html
+++ b/src/app/components/tool-bar/tool-bar.component.html
@@ -32,14 +32,14 @@
     <mat-icon class="account-icon">account_circle</mat-icon>
   </button>
   <mat-menu #userAccountMenu [overlapTrigger]="false" yPosition="below">
-    <button
+    <!-- <button
       mat-menu-item
       routerLink="/change-password"
       (click)="navigationService.removeFocus()"
     >
       <mat-icon>person</mat-icon><span>Change password</span>
-    </button>
-    <mat-divider></mat-divider>
+    </button> -->
+    <!-- <mat-divider></mat-divider> -->
     <button mat-menu-item (click)="onLogout()">
       <mat-icon>exit_to_app</mat-icon>Logout
     </button>
