--- a/src/app/components/sales/print-delivery-receipt/print-delivery-receipt.component.html
+++ b/src/app/components/sales/print-delivery-receipt/print-delivery-receipt.component.html
@@ -46,7 +46,7 @@
       <div class="buyer w-50">
         <div class="buyer-address">
           <div class="font-weight-bold font-size-16">BUYERS:</div>
-          <div>
+          <div class="address">
             {{ printService.yarnDCData.partyName }}, <br />
             {{ printService.yarnDCData.branchName }}, <br />
             {{ printService.yarnDCData.address1 }}, <br />
@@ -56,7 +56,7 @@
             <span *ngIf="printService.yarnDCData.address3"
               >{{ printService.yarnDCData.address3 }}, <br
             /></span>
-            {{ printService.yarnDCData.cityName }}, <br />
+            {{ printService.yarnDCData.cityName }},
             {{ printService.yarnDCData.stateName }} -
             {{ printService.yarnDCData.pinCode }}.
           </div>
@@ -76,7 +76,7 @@
         <div class="delivery-address">
           <div class="font-weight-bold font-size-16">DELIVERY TO:</div>
           <div>
-            <div>
+            <div class="address">
               {{ printService.yarnDCData.deliveryPartyName }}, <br />
               {{ printService.yarnDCData.deliveryBranchName }}, <br />
               {{ printService.yarnDCData.deliveryAddress1 }}, <br />
@@ -86,7 +86,7 @@
               <span *ngIf="printService.yarnDCData.deliveryAddress3"
                 >{{ printService.yarnDCData.deliveryAddress3 }}, <br
               /></span>
-              {{ printService.yarnDCData.deliveryCityName }}, <br />
+              {{ printService.yarnDCData.deliveryCityName }},
               {{ printService.yarnDCData.deliveryStateName }} -
               {{ printService.yarnDCData.deliveryPinCode }}.
             </div>
