--- a/src/app/components/sales/print-delivery-receipt/print-delivery-receipt.component.scss
+++ b/src/app/components/sales/print-delivery-receipt/print-delivery-receipt.component.scss
@@ -36,7 +36,7 @@
 
   .title {
     padding: 10px;
-    font-size: 22px;
+    font-size: 20px;
     border-top: 1px solid;
     border-bottom: 1px solid;
     margin: 4px 0;
@@ -61,7 +61,7 @@
   .declaration-header {
     margin-top: 4px;
     padding: 8px;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 500;
     border-top: 1px solid;
   }
@@ -72,7 +72,7 @@
     font-weight: 500;
     padding: 8px;
     line-height: 1.4;
-    font-size: 18px;
+    font-size: 12px;
   }
 }
 
@@ -181,4 +181,8 @@
       height: 100px;
     }
   }
+}
+
+.address {
+  font-size: 14px;
 }
