Yarn stock selection in delivery

--- a/src/app/components/sales/delivery-sales-order/select-yarn-stock/select-yarn-stock.component.scss
+++ b/src/app/components/sales/delivery-sales-order/select-yarn-stock/select-yarn-stock.component.scss
@@ -47,3 +47,14 @@
     background-color: whitesmoke;
   }
 }
+
+.search-fields {
+  display: flex;
+  gap: 24px;
+  margin-bottom: 16px;
+}
+
+.btns {
+  display: flex;
+  justify-content: flex-end;
+}
