--- a/src/app/components/sales/delivery-sales-order/select-yarn-stock/select-yarn-stock.component.html
+++ b/src/app/components/sales/delivery-sales-order/select-yarn-stock/select-yarn-stock.component.html
@@ -1,5 +1,63 @@
 <h1 mat-dialog-title>Select Yarn Stock</h1>
 <div mat-dialog-content class="form-container">
+  <div class="mb-24">
+    <form class="search-fields" [formGroup]="form">
+      <mat-form-field appearance="fill">
+        <mat-label>Lot</mat-label>
+        <input type="text" matInput formControlName="lot" />
+        <mat-error>This field is required.</mat-error>
+      </mat-form-field>
+      <mat-form-field appearance="fill" class="w-20">
+        <mat-label>Shade</mat-label>
+        <mat-select formControlName="shadeId">
+          <mat-option [value]="0">All</mat-option>
+          <ng-container *ngFor="let shade of shadeList">
+            <mat-option [value]="shade.shadeId">{{
+              shade.shadeName
+            }}</mat-option>
+          </ng-container>
+        </mat-select>
+        <mat-hint>Optional</mat-hint>
+      </mat-form-field>
+      <mat-form-field appearance="fill" class="w-20">
+        <mat-label>Blend</mat-label>
+        <mat-select formControlName="blendId">
+          <mat-option [value]="0">All</mat-option>
+          <ng-container *ngFor="let blend of blendList">
+            <mat-option [value]="blend.blendId">{{
+              blend.blendName
+            }}</mat-option>
+          </ng-container>
+        </mat-select>
+        <mat-hint>Optional</mat-hint>
+      </mat-form-field>
+      <mat-form-field appearance="fill" class="w-20">
+        <mat-label>Counts</mat-label>
+        <mat-select formControlName="countsId">
+          <mat-option [value]="0">All</mat-option>
+          <ng-container *ngFor="let counts of countsList">
+            <mat-option [value]="counts.countsId">{{
+              counts.counts
+            }}</mat-option>
+          </ng-container>
+        </mat-select>
+        <mat-hint>Optional</mat-hint>
+      </mat-form-field>
+    </form>
+    <div class="btns">
+      <button mat-raised-button (click)="onReset()" class="ml-32">
+        <mat-icon>refresh</mat-icon>Reset
+      </button>
+      <button
+        mat-raised-button
+        color="primary"
+        (click)="onSearch()"
+        class="ml-16"
+      >
+        <mat-icon>search</mat-icon>Search
+      </button>
+    </div>
+  </div>
   <div class="table-container">
     <div *ngIf="loader" class="loader">
       <mat-spinner></mat-spinner>
