--- a/src/app/components/payroll/monthly-salary-list/monthly-salary-list.component.html
+++ b/src/app/components/payroll/monthly-salary-list/monthly-salary-list.component.html
@@ -64,7 +64,7 @@
           </div>
           <div>
             <div class="text-dark pb-2">Month</div>
-            <div>{{ convertToDate(employeeSalary.monthStartDate, false) }}</div>
+            <div>{{ employeeSalary.monthStartDate }}</div>
           </div>
           <div>
             <div class="text-dark pb-2">Deduction Amount</div>
@@ -91,21 +91,21 @@
           <ng-container matColumnDef="attendanceDate">
             <th mat-header-cell *matHeaderCellDef>Attendance Date</th>
             <td mat-cell *matCellDef="let row">
-              {{ convertToDate(row.attendanceDate, false) }}
+              {{ row.attendanceDate }}
             </td>
           </ng-container>
 
           <ng-container matColumnDef="firstCheckInTime">
             <th mat-header-cell *matHeaderCellDef>First Check In</th>
             <td mat-cell *matCellDef="let row">
-              {{ convertToDate(row.firstCheckInTime, true) }}
+              {{ row.firstCheckInTime }}
             </td>
           </ng-container>
 
           <ng-container matColumnDef="lastCheckOutTime">
             <th mat-header-cell *matHeaderCellDef>Last Check Out</th>
             <td mat-cell *matCellDef="let row">
-              {{ convertToDate(row.lastCheckOutTime, true) }}
+              {{ row.lastCheckOutTime }}
             </td>
           </ng-container>
 
