--- a/src/app/components/employee/employee-list/employee-details/employee-details.component.html
+++ b/src/app/components/employee/employee-list/employee-details/employee-details.component.html
@@ -59,13 +59,13 @@
     </div>
   </section>
 </div>
-<!-- <div mat-dialog-actions class="footer">
+<div mat-dialog-actions class="footer">
   <button mat-raised-button color="primary" (click)="updateEmployee()">
     <mat-icon aria-label="edit icon">edit</mat-icon>
     Update
   </button>
-  <button mat-raised-button color="warn" (click)="deleteEmployee()">
+  <!-- <button mat-raised-button color="warn" (click)="deleteEmployee()">
     <mat-icon aria-label="delete icon">delete</mat-icon>
     Delete
-  </button>
-</div> -->
+  </button> -->
+</div>
