--- a/src/app/components/employee/employee-list/employee-list.component.scss
+++ b/src/app/components/employee/employee-list/employee-list.component.scss
@@ -17,6 +17,10 @@ table-container {
   background-color: #fff;
 }
 
+.mat-mdc-cell {
+  max-width: 220px;
+}
+
 .table {
   border-bottom: 1px solid rgba(0, 0, 0, 0.15);
 }
