--- a/src/app/components/employee/timesheet/timesheet.component.html
+++ b/src/app/components/employee/timesheet/timesheet.component.html
@@ -123,6 +123,23 @@
             </td>
           </ng-container>
 
+          <ng-container matColumnDef="todaysDepartment">
+            <th mat-header-cell *matHeaderCellDef>Department</th>
+            <td mat-cell *matCellDef="let element">
+              <mat-form-field appearance="fill">
+                <mat-label>Choose</mat-label>
+                <mat-select [(ngModel)]="element.todaysDepartment">
+                  <mat-option
+                    *ngFor="let department of departmentList"
+                    [value]="department.departmentName"
+                  >
+                    {{ department.departmentName | titlecase }}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+            </td>
+          </ng-container>
+
           <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let element">
@@ -157,7 +174,7 @@
     <button mat-raised-button (click)="resetData()" class="mr-16">
       <mat-icon>refresh</mat-icon>Reset
     </button>
-    <button mat-raised-button color="primary">
+    <button mat-raised-button color="primary" (click)="save()">
       <mat-icon>save_alt</mat-icon>Submit
     </button>
   </div>
