--- a/src/app/components/employee/timesheet/timesheet.component.html
+++ b/src/app/components/employee/timesheet/timesheet.component.html
@@ -1,18 +1,39 @@
 <section class="container">
   <h1 class="header letter-spacing-1">Timesheet (Manual)</h1>
-  <mat-form-field appearance="fill" class="w-50 mb-16">
-    <mat-label>Employee</mat-label>
-    <mat-select [formControl]="employeeId">
-      <mat-option
-        *ngFor="let employee of employeelist"
-        [value]="employee.employeeId"
+  <ng-container>
+    <mat-form-field appearance="fill" class="w-50 mb-16">
+      <mat-label>Employee</mat-label>
+      <mat-select [formControl]="employeeId">
+        <mat-option
+          *ngFor="let employee of employeelist"
+          [value]="employee.employeeId"
+        >
+          {{ employee.firstName + " " + employee.lastName | titlecase }}
+        </mat-option>
+      </mat-select>
+      <mat-error>This field is required.</mat-error>
+    </mat-form-field>
+    <mat-form-field appearance="fill" class="ml-24">
+      <mat-label>Month Start Date</mat-label>
+      <input
+        matInput
+        [matDatepicker]="startDatePicker"
+        [formControl]="monthStartDate"
+        (dateChange)="appSharedService.formatDate($event, monthStartDate)"
+      />
+      <mat-hint>DD/MM/YYYY</mat-hint>
+      <mat-datepicker-toggle
+        matIconSuffix
+        [for]="startDatePicker"
+      ></mat-datepicker-toggle>
+      <mat-datepicker #startDatePicker></mat-datepicker>
+      <mat-error *ngIf="monthStartDate?.hasError('required')"
+        >Please enter valid date.</mat-error
       >
-        {{ employee.firstName + " " + employee.lastName | titlecase }}
-      </mat-option>
-    </mat-select>
-    <mat-error>This field is required.</mat-error>
-  </mat-form-field>
-  <mat-card *ngIf="employeeId?.value">
+    </mat-form-field>
+  </ng-container>
+
+  <mat-card *ngIf="employeeId?.value && monthStartDate?.valid">
     <mat-card-header class="mb-16">
       <mat-card-title> Entry </mat-card-title>
     </mat-card-header>
@@ -25,6 +46,8 @@
             [matDatepicker]="timeInpicker"
             formControlName="timeInDate"
             name="timeInDate"
+            [min]="minDate"
+            [max]="maxDate"
             required
           />
           <mat-datepicker-toggle
@@ -36,6 +59,14 @@
           <mat-error *ngIf="form.get('timeInDate')?.hasError('required')"
             >Please enter valid date.</mat-error
           >
+          <mat-error
+            *ngIf="
+              form.get('timeInDate')?.hasError('matDatepickerMin') ||
+              form.get('timeInDate')?.hasError('matDatepickerMax')
+            "
+            >Allowed only
+            {{ minDate?.toLocaleString("default", { month: "long" }) }} month
+          </mat-error>
         </mat-form-field>
         <mat-form-field appearance="fill" class="ml-24 w-15">
           <mat-label>Time In</mat-label>
@@ -170,7 +201,7 @@
     </mat-card-content>
   </mat-card>
 
-  <div class="footer" *ngIf="employeeId?.value">
+  <div class="footer" *ngIf="employeeId?.value && monthStartDate?.valid">
     <button mat-raised-button (click)="resetData()" class="mr-16">
       <mat-icon>refresh</mat-icon>Reset
     </button>
