--- a/src/app/components/purchases/fibre/fibre-stock/stock-details/stock-details.component.html
+++ b/src/app/components/purchases/fibre/fibre-stock/stock-details/stock-details.component.html
@@ -16,7 +16,7 @@
     </div>
     <div>
       <div class="text-dark pb-2">Received Date</div>
-      <div>{{ fibreStock.receivedDate | date : "dd/MM/yyyy" }}</div>
+      <div>{{ formatDate(fibreStock.receivedDate) }}</div>
     </div>
     <div>
       <div class="text-dark pb-2">Fibre Name</div>
