stock detail update

--- a/src/app/components/purchases/fibre/fibre-stock/stock-details/stock-details.component.html
+++ b/src/app/components/purchases/fibre/fibre-stock/stock-details/stock-details.component.html
@@ -34,7 +34,7 @@
       <div class="text-dark pb-2">Stock Qty</div>
       <div>{{ fibreStock.stock }} kg</div>
     </div>
-    <div>
+    <div *ngIf="fibreStock.partyName">
       <div class="text-dark pb-2">Party</div>
       <div>{{ fibreStock.partyName }}</div>
     </div>
